refactor: Improve AI response parsing and error handling
Enhance the `cleanJsonResponse` function to robustly handle AI responses that may include markdown code blocks (```json ... ```) or extra whitespace, ensuring more reliable JSON extraction.

Refine error handling in `App.tsx` to provide more specific and user-friendly messages for AI service connection issues, improving the debugging experience.

Remove unused inline CSS for theme transition from `index.html`.

--- a/index.html
+++ b/index.html
@@ -20,22 +20,13 @@
             }
         }
         
-        // Bloqueo de parpadeo (Theme script)
         (function() {
             const theme = localStorage.getItem('app_theme_preference') || 'system';
             const isDark = theme === 'dark' || (theme === 'system' && window.matchMedia('(prefers-color-scheme: dark)').matches);
-            if (isDark) {
-                document.documentElement.classList.add('dark');
-            } else {
-                document.documentElement.classList.remove('dark');
-            }
+            if (isDark) document.documentElement.classList.add('dark');
+            else document.documentElement.classList.remove('dark');
         })();
     </script>
-    <style>
-        body {
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-    </style>
 <script type="importmap">
 {
   "imports": {
